--- a/vuepress-starter/.github/workflows/deploy-docs.yml
+++ b/vuepress-starter/.github/workflows/deploy-docs.yml
@@ -1,11 +1,9 @@
-
 name: Deploy Docs
 
 on:
   push:
     branches:
-      # make sure this is the branch you are using
-      - main
+      - master
 
 permissions:
   contents: write
@@ -18,10 +16,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          # if your docs needs submodules, uncomment the following line
-          # submodules: true
-
-
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
