--- a/vuepress-starter/.github/workflows/deploy-docs.yml
+++ b/vuepress-starter/.github/workflows/deploy-docs.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Build Docs
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          npm run docs:build
-          > docs/.vuepress/dist/.nojekyll
+        run: npm run docs:build
+
+      - name: Disable Jekyll
+        run: echo > docs/.vuepress/dist/.nojekyll
 
       - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # This is the branch where the docs are deployed to
           branch: gh-pages
           folder: docs/.vuepress/dist
