--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepress/theme-default": "^2.0.0-rc.11",
     "sass-embedded": "^1.81.0",
     "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7"
+    "vuepress": "^2.0.0-rc.7",
+    "vuepress-plugin-search-pro": "^2.0.0-rc.59"
   }
 }
