--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.7",
     "@vuepress/theme-default": "^2.0.0-rc.11",
+    "sass": "^1.81.0",
     "sass-embedded": "^1.81.0",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.7",
     "vuepress-plugin-search-pro": "^2.0.0-rc.59"
+  },
+  "dependencies": {
+    "pnpm": "^9.13.2"
   }
 }
