--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sass-embedded": "^1.81.0",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.7",
-    "vuepress-plugin-search-pro": "^2.0.0-rc.59"
+    "vuepress-plugin-search-pro": "2.0.0-rc.59"
   },
   "dependencies": {
     "pnpm": "^9.13.2"
