Fix deploy file

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,10 +33,14 @@ jobs:
           # cache deps for pnpm
           cache: pnpm
 
+      - name: Clear dist folder
+        run: rm -rf dist
+
+      - name: Clear seach cache
+        run: rm -rf docs/.vuepress/search-pro.worker.js
+
       # run build script
       - name: Build VuePress site
-        run: rm -rf dist
-        run: rm -rf docs/.vuepress/search-pro.worker.js
         run: pnpm docs:build
 
       # please check out the docs of the workflow for more details
