--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Clear dist folder
-        run: rm -rf dist
-
-      - name: Clear seach cache
-        run: rm -rf docs/.vuepress/search-pro.worker.js
+      # Clean .temp and .cache folders
+      - name: Clean .temp and .cache
+        run: |
+          rm -rf .temp
+          rm -rf .cache
 
       # run build script
       - name: Build VuePress site
