--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "sass": "^1.81.0",
     "sass-embedded": "^1.81.0",
     "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7",
-    "vuepress-plugin-search-pro": "2.0.0-rc.59"
+    "vuepress": "^2.0.0-rc.7"
   },
   "dependencies": {
     "20": "^3.1.9",
