--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
-    "@vuepress/theme-default": "^2.0.0-rc.11",
+    "@vuepress/bundler-vite": "2.0.0-rc.7",
+    "@vuepress/theme-default": "2.0.0-rc.60",
     "sass": "^1.81.0",
     "sass-embedded": "^1.81.0",
-    "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7",
-    "vuepress-plugin-search-pro": "^2.0.0-rc.59"
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-search-pro": "2.0.0-rc.59"
   },
   "dependencies": {
     "20": "^3.1.9",
-    "pnpm": "^9.13.2"
+    "pnpm": "^9.14.1"
   }
 }
